# Rust-Vector-Database

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/: TODO.md  index.md
docs/development/: configuration.md  getting-started.md  testing.md
phenix-db/: Cargo.toml
phenix-db/src/api/: mod.rs
phenix-db/src/concurrency/: mod.rs
phenix-db/src/core/: edges.rs  entity.rs  error.rs  metadata.rs  mod.rs  mvcc.rs  query.rs  traits.rs  transaction.rs  types.rs  vector.rs
phenix-db/src/distributed/: mod.rs
phenix-db/src/index/: mod.rs
phenix-db/src/learning/: mod.rs
phenix-db/src/mathematical/: mod.rs
phenix-db/src/memory/: mod.rs
phenix-db/src/observability/: mod.rs
phenix-db/src/security/: mod.rs
phenix-db/src/storage/: mod.rs
