[package]
name = "phenix-db"
version = "0.1.0"
edition = "2021"
authors = ["Phenix-DB Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mhassan72/Phenix-DB"
homepage = "https://github.com/mhassan72/Phenix-DB"
documentation = "https://docs.rs/phenix-db"
readme = "README.md"
keywords = ["database", "vector", "graph", "memory", "cognitive"]
categories = ["database", "data-structures", "algorithms"]
description = "A mathematical memory substrate - self-organizing, learning, and adaptive cognitive memory system"

[lib]
name = "phenix_db"
path = "src/lib.rs"

[[bin]]
name = "phenix-server"
path = "src/bin/server.rs"

[[bin]]
name = "phenix-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Concurrency
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-prometheus = "0.14"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"
chacha20poly1305 = "0.10"

# Networking
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Storage
rocksdb = { version = "0.21", optional = true }
sled = "0.34"

# Mathematical operations
nalgebra = "0.32"
ndarray = "0.15"
num-traits = "0.2"
num-complex = "0.4"
approx = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"
lazy_static = "1.4"

# Configuration
config = "0.13"
envy = "0.4"

# Optional dependencies for feature flags
# SIMD support
packed_simd_2 = { version = "0.3", optional = true }

# GPU acceleration
cudarc = { version = "0.10", optional = true }
ocl = { version = "0.19", optional = true }

# Homomorphic encryption
# Note: These are placeholder versions - update when implementing homomorphic encryption
# concrete = { version = "2.11", optional = true }
# tfhe = { version = "0.7", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
mockall = "0.12"
tempfile = "3.8"

[features]
default = []

# Storage backends
rocksdb-backend = ["rocksdb"]

# Hardware acceleration features
simd = ["packed_simd_2"]
gpu = ["cudarc", "ocl"]
cuda = ["cudarc"]
opencl = ["ocl"]

# Cryptography features
# homomorphic = ["concrete", "tfhe"]

# All features
full = ["simd", "gpu", "rocksdb-backend"]

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
